ISSUE:  Redmine #670  PURPOSE:  Transaaction Styles and Accessibility Checking  DESCRIPTION:   Wave web aim accesibility checker-- contrast fix.

--- a/shared/css/header_footer_styles.css
+++ b/shared/css/header_footer_styles.css
@@ -3,6 +3,7 @@
 /*.menu-div, .bg-light {
 	background-color: #f8f9fa;
 }*/
+.btn-link,.helpText, a {color: #036ee0 !important;}
 :focus:not(:focus-visible) {
     outline:0;
 }
